--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
-numpy
-flask
-opencv-python
+numpy==1.18.3
+scikit-image==0.14.2
+opencv-python==4.4.0.42
 pybase64
-scikit-image
-gunicorn
-opencv-contrib-python
+click==7.1.2
+Flask==1.0.2
+gunicorn==20.0.4
+itsdangerous==1.1.0
+Jinja2==2.10
+MarkupSafe==1.1.1
+Werkzeug==1.0.1
